[package]
name = "bevy-parallax"
version = "0.1.2"
authors = ["Carlo Supina <cdsupina@gmail.com>"]
edition = "2021"
description = "A Bevy plugin for creating a parallax effect."
readme = "README.md"
license = "MIT"
repository = "https://github.com/Corrosive-Games/bevy-parallax"
categories = ["game-development", "games"]
keywords = ["bevy", "gamedev", "parallax", "scrolling", "background"]
exclude = ["assets/*"]

[dependencies]
bevy = "0.7.0"
serde = "1.0.136"

[dev-dependencies]
bevy-inspector-egui = "0.10.0"
ron = "0.7.0"
