[package]
name = "bevy-parallax"
version = "0.6.1"
authors = ["Carlo Supina <cdsupina@gmail.com>"]
edition = "2021"
description = "A Bevy plugin for creating a parallax effect."
readme = "README.md"
license = "MIT"
repository = "https://github.com/Corrosive-Games/bevy-parallax"
categories = ["game-development", "games"]
keywords = ["bevy", "gamedev", "parallax", "scrolling", "background"]
exclude = ["assets/*"]

[dependencies]
serde = "1.0.180"

[dependencies.bevy]
version = "0.12.0"
default-features = false
features = [
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_asset",
]

[dev-dependencies]
bevy-inspector-egui = "0.21.0"
ron = "0.8.0"

[dev-dependencies.bevy]
version = "0.12.0"
default-features = false
features = ["x11", "png"]

[package.metadata.docs.rs]
features = ["bevy/x11"]
