[package]
name = "bevy-parallax"
version = "0.8.0"
authors = ["Carlo Supina <cdsupina@gmail.com>"]
edition = "2021"
description = "A Bevy plugin for creating a parallax effect."
readme = "README.md"
license = "MIT"
repository = "https://github.com/Corrosive-Games/bevy-parallax"
categories = ["game-development", "games"]
keywords = ["bevy", "gamedev", "parallax", "scrolling", "background"]
exclude = ["assets/*"]

[dependencies]
serde = { version = "1.0.180", optional = false }
bevy-inspector-egui = { version = "0.23.0", optional = true }

[dependencies.bevy]
version = "0.13.0"
default-features = false
features = ["bevy_render", "bevy_core_pipeline", "bevy_sprite", "bevy_asset"]

[dev-dependencies]
bevy-inspector-egui = "0.23.0"
ron = "0.8.0"

[dev-dependencies.bevy]
version = "0.13.0"
default-features = false
features = ["x11", "png"]

[package.metadata.docs.rs]
features = ["bevy/x11"]


[features]
bevy-inspector-egui = ["dep:bevy-inspector-egui"]
